# tunator

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: routes.py
backend/app/core/: constants.py  log_reader.py
backend/app/core/config/: tor_config_manager.py
backend/app/core/detection/: environment_detector.py
backend/app/core/diagnostics/: diagnostics_runner.py
backend/app/core/service/: control_port_client.py  tor_service_manager.py
backend/app/db/: repository.py
backend/app/schemas/: config.py  diagnostics.py  environment.py  logs.py  onion.py  service.py
backend/app/services/: tunator_service.py
backend/tests/: conftest.py  test_config_manager.py  test_db_migrations.py  test_diagnostics_runner.py  test_onion_manager.py  test_routes.py  test_service_api_contract.py  test_tor_runtime_manager.py
docker/: docker-compose.yml
docs/: diagnostics.md  local-tor-runtime.md  mvp-scope.md  security-notes.md  supported-configs.md  vision.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/composables/: useTunator.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/views/: BackupsView.vue  DashboardView.vue  LogsView.vue
scripts/: bootstrap_backend.ps1  bootstrap_backend.sh
